// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with color blue 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-blue-60 text-blue-80 active:text-blue-90 border-blue-80 outline-blue-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color cyan 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-cyan-60 text-cyan-80 active:text-cyan-90 border-cyan-80 outline-cyan-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color gray 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-gray-60 text-gray-80 active:text-gray-90 border-gray-80 outline-gray-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color green 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-green-60 text-green-80 active:text-green-90 border-green-80 outline-green-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color lightblue 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-lightblue-60 text-lightblue-80 active:text-lightblue-90 border-lightblue-80 outline-lightblue-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color primary 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-primary-60 text-primary-80 active:text-primary-90 border-primary-80 outline-primary-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color purple 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-purple-60 text-purple-80 active:text-purple-90 border-purple-80 outline-purple-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color red 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-red-60 text-red-80 active:text-red-90 border-red-80 outline-red-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color teal 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-teal-60 text-teal-80 active:text-teal-90 border-teal-80 outline-teal-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color void 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-white text-gray-60  border-gray-60 outline-primary-30 active:border-gray-80 active:text-gray-90 hover:text-gray-70"
  onClick={[Function]}
  type="button"
>
  <span
    className="w-5 h-5"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.364 18.364A9 9 0 005.636 5.636m12.728 12.728A9 9 0 015.636 5.636m12.728 12.728L5.636 5.636"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;

exports[`should render with color yellow 1`] = `
<button
  className="flex items-center justify-center w-6 h-6 rounded border group hover:cursor-pointer hover:outline hover:outline-4 active:shadow-[inset_0_0_4px_rgba(0,0,0,0.5)] hover:shadow-[0_1px_3px_rgba(112,53,13,0.25)] bg-yellow-60 text-yellow-80 active:text-yellow-90 border-yellow-80 outline-yellow-30"
  onClick={[Function]}
  type="button"
>
  <span
    className="group-hover:block w-5 h-5 hidden"
  >
    <svg
      aria-hidden="true"
      fill="none"
      stroke="currentColor"
      strokeWidth={2}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</button>
`;
